add support for running in newer java envs